...
              CreateEventForSerieScreenTestTags.FOR_EACH_INPUT_EVENT_LOCATION_SUGGESTION,
          inputEventDuration = CreateEventForSerieScreenTestTags.INPUT_EVENT_DURATION,
          buttonSaveEvent = CreateEventForSerieScreenTestTags.BUTTON_SAVE_EVENT,
          errorMessage = CreateEventForSerieScreenTestTags.ERROR_MESSAGE)

  EventForSerieFormScreen(
      title = "Create Event for Serie",
      formState = uiState,
      isFormValid = uiState.isValid,
      testTags = testTags,
      onTypeChange = { createEventForSerieViewModel.setType(it) },
      onTitleChange = { createEventForSerieViewModel.setTitle(it) },
      onDescriptionChange = { createEventForSerieViewModel.setDescription(it) },
...
        if (success) {
          onDone()
        }
        success
      },
      onGoBack = onGoBack,
      saveButtonText = "CREATE EVENT")
}

